src/objects/CEP_ICD__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerID__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>CEP_ICD_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credits_Attained__c</fullName>
        <label>Credits Attained</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Client_Narrative__c</fullName>
        <label>Education - Client Narrative</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Plan__c</fullName>
        <description>Renamed from &quot;Education Section 2&quot;</description>
        <inlineHelpText>Staff Recommendations and Plan</inlineHelpText>
        <label>Education Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Section_1__c</fullName>
        <label>Employment Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GED?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICD_Services__c</fullName>
        <label>ICD Services</label>
        <picklist>
            <picklistValues>
                <fullName>HSE Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring (HSE or HS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Re-enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEP support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post secondary counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating a resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crafting a cover letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revising a resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational training programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSHA card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Literacy Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applying to entry-level jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Literacy workshops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job-Readiness workshops</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Grade_Completed__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Last Grade Completed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_School_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from Contact until assessment complete</description>
        <label>Last School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>aCEP ICD</relationshipLabel>
        <relationshipName>CEP_ICD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Last_Attended_Other__c</fullName>
        <label>Last Attended:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Last_Attended_School__c</fullName>
        <label>Month/Year Last Attended School</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Taken_GED__c</fullName>
        <label>Month/Year Last Taken GED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Taken_Regents__c</fullName>
        <description>Regents Month and Year last taken</description>
        <inlineHelpText>Regents Month and Year last taken</inlineHelpText>
        <label>Month/Year Last Taken Regents</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mo_Yr_Taken_TASC__c</fullName>
        <label>Month/Year Last Taken TASC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Education_Attended__c</fullName>
        <label>School name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regents?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sections_Passed_GED__c</fullName>
        <label>GED Sections Passed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sections_Passed_Regents__c</fullName>
        <label>Regents Sections Passed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sections_Passed_TASC__c</fullName>
        <label>TASC Sections Passed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TASC?</label>
        <type>Checkbox</type>
    </fields>
    <label>aCEP ICD</label>
    <nameField>
        <displayFormat>CIA -{0000}</displayFormat>
        <label>CEP ICD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aCEP ICD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>